--- a/pipeline_config.yaml
+++ b/pipeline_config.yaml
@@ -1,4 +1,4 @@
-location_name: Yellowstone County, US, MT
+location_name: Yellowstone National Park, US, WY
 n_clusters: 5
 per_page: 10
 run_mode: clustering
