--- a/pipeline_config.yaml
+++ b/pipeline_config.yaml
@@ -1,5 +1,12 @@
+cloud_backend: s3
+date_range:
+  end: None
+  start: None
 location_name: Yellowstone National Park, US, WY
 n_clusters: 5
-per_page: 10
-run_mode: clustering
+per_page: 20
+run_mode:
+- llm_summary
+- clustering
+s3_bucket: wildlife-logs
 taxon_name: null
